--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Hoje é sexta, mas não é sexta de verdade...</h1>
+    <h2>Só não é sexta porque é quarta, e quinta é feriado.</h2>
 </body>
 </html>
