Segunda alteracao em Develop

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Hoje é sexta, mas não é sexta de verdade...</h1>
     <h2>Só não é sexta porque é quarta, e quinta é feriado.</h2>
+    <h3>Estamos aprendendo comandos no GitHub usando Git e Git add .</h3>
 </body>
 </html>
