--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hoje é sexta, mas não é sexta de verdade...</h1>
     <h2>Só não é sexta porque é quarta, e quinta é feriado.</h2>
     <h3>Estamos aprendendo comandos no GitHub usando Git e Git add .</h3>
+    <h4>E hoje é dia 29/05/2024</h4>
 </body>
 </html>
